test/classes/errors/nilability-assign/assign-oknil-owned-from-oknil-borrowed.chpl
//  lhs: owned?  rhs: borrowed?  error: mm

class MyClass {  var x: int;  }

var lhs: owned MyClass? = nil;
var rhs: borrowed MyClass?;

lhs = rhs;

compilerError("done");

